 - added processing of distributed events (Alexei)
 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

 - added support of macro {TRIGGER.ID} (Alexei)
 - added support of macro {EVENT.ID} (Alexei)
 - better calculation of next check timestamp for active items (Alexei)
 - new algorithm for housekeeping same for all DB engines (Alexei)
 - always draw graphs for items having type "trapper" (Alexei)
 - fixed assignment of default listen port for Win agent (Eugene)
 - changed return value for 'net.tcp.port[]' of Win agent (Eugene)
 - added images for postgres (Eugene)
 - fixed perofmance problem in Status of Triggers (Alexei)
 - remove left spaces from script full path (Alexei)
 - fixed situations when latest_alarm() may return wrong value (Alexei)
 - added Swedish translation. Thanks to "yeager". (Alexei)
 - fixed calculation of delta(#N) (Alexei)
 - better processing of units 's', support for units 'uptime' (Alexei)
 - fixed calculation of nodata() (Alexei)
 - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
 - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
 - fixed processing of SNMP HEX and OCTET string values (Alexei)
 - added Dutch tranlation (Alexei)
 - fixed reversed icons on maps (Eugene)
 - fixed trigger description substitution in action comporation (Eugene) 
 - fixed trigger description substitution in message subject and body (Eugene) 
 - added color selection for trigger severity 'warning' and 'information' (Eugene)
 - fixed limitation of return value for 'net.if.*' (Eugene)
 - fixed limitation of return value for 'vfs.dev.*' (Eugene)
 - fixed limitation of return value for 'system.cpu.intr' (Eugene)